--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,18 @@ allprojects {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+
+        // 네이버 지도 저장소
+        maven {
+            url 'https://navercorp.bintray.com/maps'
+        }
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
