--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Search"></activity>
+        <activity android:name=".Map"></activity>
+        <activity android:name=".Search" />
         <activity android:name=".Muckpot" />
-        <activity android:name=".Map" />
         <activity android:name=".Feed" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -27,7 +27,6 @@
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="swscecoixf" />
-
     </application>
 
 </manifest>
