--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Search"/>
+        <activity android:name=".UserProfile"></activity>
+        <activity android:name=".FeedWrite" />
+        <activity android:name=".FeedDetail" />
+        <activity android:name=".Search" />
         <activity android:name=".Muckpot" />
         <activity android:name=".Map" />
         <activity android:name=".Feed" />
@@ -27,7 +30,6 @@
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="swscecoixf" />
-
     </application>
 
 </manifest>
