--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         <activity android:name=".Muckpot" />
         <activity android:name=".Map" />
         <activity android:name=".Feed" />
+        <activity android:name=".FeedDetail" />
         <activity android:name=".FeedWrite" />
+        <activity android:name=".UserProfile" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
