--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         <activity android:name=".Map" />
         <activity android:name=".Feed" />
         <activity android:name=".FeedWrite" />
+        <activity android:name=".FeedDetail" />
+        <activity android:name=".Muckpot_Detail" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +30,5 @@
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="swscecoixf" />
-
     </application>
-
 </manifest>
