--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    // 자바 버전 설정
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -31,4 +37,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // 카카오 SDK 모듈 설정
+    implementation 'com.kakao.sdk:usermgmt:1.30.0'
+    implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.14.0'
+    implementation "com.kakao.sdk:v2-user:2.0.2" // 카카오 로그인, 사용자 관리
+    implementation "com.kakao.sdk:v2-talk:2.0.2" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.0.2" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.0.2" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.0.2" // 카카오내비
+    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
 }
