--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,21 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!-- 인터넷 사용 권한 설정-->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Search"/>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+
+        <activity android:name=".Login"/>
+        <activity android:name=".Search" />
         <activity android:name=".Muckpot" />
         <activity android:name=".Map" />
         <activity android:name=".Feed" />
@@ -23,15 +27,22 @@
         <activity android:name=".UserProfile" />
         <activity android:name=".Muckpot_Detail" />
         <activity android:name=".MainActivity">
+
+            <!-- 네이버 -->
+            <meta-data
+                android:name="com.naver.maps.map.CLIENT_ID"
+                android:value="swscecoixf" />
+
+            <!-- 카카오 -->
+            <meta-data
+                android:name="com.kakao.sdk.AppKey"
+                android:value="@string/kakao_app_key" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <meta-data
-            android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="swscecoixf" />
+        </activity>
     </application>
 </manifest>
