--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,7 @@ buildscript {
         google()
         jcenter()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
+    dependencies {classpath 'com.android.tools.build:gradle:4.0.1'}
 }
 
 allprojects {
@@ -25,9 +13,11 @@ allprojects {
         jcenter()
 
         // 네이버 지도 저장소
-        maven {
-            url 'https://navercorp.bintray.com/maps'
-        }
+        maven {url 'https://navercorp.bintray.com/maps'}
+
+        // 카카오 SDK 리포지트리 설정
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'}
     }
 }
 
