--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".GlobalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,21 +29,21 @@
         <activity android:name=".Muckpot_Detail" />
         <activity android:name=".MainActivity">
 
-            <!-- 네이버 -->
-            <meta-data
-                android:name="com.naver.maps.map.CLIENT_ID"
-                android:value="swscecoixf" />
-
-            <!-- 카카오 -->
-            <meta-data
-                android:name="com.kakao.sdk.AppKey"
-                android:value="@string/kakao_app_key" />
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
         </activity>
+
+        <!-- 네이버 -->
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="swscecoixf" />
+
+        <!-- 카카오 -->
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_app_key" />
     </application>
 </manifest>
