--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
-        <activity android:name=".Login"/>
+        <activity android:name=".Index"/>
         <activity android:name=".Search" />
         <activity android:name=".Muckpot" />
         <activity android:name=".Map" />
@@ -45,5 +45,6 @@
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
+
     </application>
 </manifest>
