--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,24 @@
     package="com.example.rfg2020">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <!-- 인터넷 사용 권한 설정-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 인터넷 사용 권한 설정 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".GlobalApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
-        <activity android:name=".Index"/>
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@font/font" />
+
+        <activity android:name=".Index" />
         <activity android:name=".Search" />
         <activity android:name=".Muckpot" />
         <activity android:name=".Map" />
@@ -29,23 +31,18 @@
         <activity android:name=".UserJoin" />
         <activity android:name=".MuckpotDetail" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-
-        <!-- 네이버 -->
+        </activity> <!-- 네이버 -->
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="swscecoixf" />
-
-        <!-- 카카오 -->
+            android:value="swscecoixf" /> <!-- 카카오 -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
-
     </application>
+
 </manifest>
