--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     //Glide(URL로 이미지 불러오기)
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //ted permission
+    implementation "gun0912.ted:tedpermission:2.1.0"
 }
